--- a/package.json
+++ b/package.json
@@ -33,11 +33,14 @@
     "@git-diff-view/react": "^0.0.35",
     "@git-diff-view/shiki": "^0.0.36",
     "@radix-ui/react-alert-dialog": "^1.1.1",
+    "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-context-menu": "^2.2.16",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
+    "@radix-ui/react-hover-card": "^1.1.14",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
@@ -79,9 +82,12 @@
     "react": "19.2.1",
     "react-dom": "19.2.1",
     "react-hotkeys-hook": "^4.6.1",
+    "react-markdown": "^10.1.0",
     "react-icons": "^5.5.0",
     "react-syntax-highlighter": "^16.1.0",
+    "remark-gfm": "^4.0.1",
     "shiki": "^1.24.4",
+    "simple-git": "^3.28.0",
     "sonner": "^1.7.1",
     "superjson": "^2.2.2",
     "tailwind-merge": "^2.6.0",
